--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "xtraorange/jenkinize_laravel",
     "description": "Create an CI/CD pipeline in any Laravel project with fewer steps.",
+    "version": "v0.1",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Xtraorange\\JenkinizeLaravel\\": "src/"
@@ -12,5 +14,13 @@
             "email": "xtraorange@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Xtraorange\\JenkinizeLaravel\\JenkinizeLaravelServiceProvider"
+            ]
+        }
+    }
 }
