--- a/jenkins.config
+++ b/jenkins.config
@@ -1,1 +1,20 @@
-PROJECT_NAME = 'project_name'
+def environments = [
+    test:
+        [
+            branch_name: 'tst',
+            require_confirmation: false,
+            app_port: 8001
+        ],
+    stage:
+        [
+            branch_name: 'stg',
+            require_confirmation: false,
+            app_port: 8002
+        ],
+]
+
+def config = [
+    project_name: 'Default Project Name',
+    environments: environments
+]
+return config
