--- a/resources/jenkinize.config
+++ b/resources/jenkinize.config
@@ -11,10 +11,19 @@ def environments = [
             require_confirmation: false,
             app_port: 8002
         ],
+    prod:
+        [
+            branch_name: 'main',
+            require_confirmation: false,
+            app_port: 9000
+        ]
 ]
 
 def config = [
-    project_name: 'Default Project Name',
+    project_name: "Laravel Project",
+    dockerfile: "docker/Dockerfile",
+    docker_compose_file:"docker/docker-compose.yml",
     environments: environments
+
 ]
 return config
